delete unnecessary classes